# ai-data-quality-validator

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: sample_annotations.csv
src/ai_data_quality_validator/: cli.py  report.py  validator.py
src/ai_data_quality_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_validator.py
